docs: Add Java 16+ .jvmopts fix for sbt-dotenv InaccessibleObjectException
- Add warning about java.lang.reflect.InaccessibleObjectException on Java 16+
- Document .jvmopts fix as primary cross-platform solution under Option 2
- Clarify Option 1 label as bash-specific